# zwherigo

./: LICENSE
docs/: engine_event_matrix.md
sdk/: .gitignore  README.md  pyproject.toml
sdk/docs/: beta-readiness.md  compatibility-notes.md  editor-api.md  gwc-compiler-setup.md  webui-presets-rollout.md  webui.md
sdk/samples/: template-demo.wigi.json
sdk/samples/real/shougang4/: README.md  _cartridge.lua
sdk/src/wherigo_sdk/: __init__.py  cli.py  errors.py
sdk/src/wherigo_sdk/compat/: __init__.py  notes.py
sdk/src/wherigo_sdk/editor/: __init__.py  changes.py  editor_api.py  operations.py  references.py
sdk/src/wherigo_sdk/io/: __init__.py  project_io.py
sdk/src/wherigo_sdk/lua/: __init__.py  emitter.py
sdk/src/wherigo_sdk/model/: __init__.py  entities.py  validation.py
sdk/src/wherigo_sdk/packaging/: __init__.py  compiler.py  gwz.py  pipeline.py
sdk/src/wherigo_sdk/presets/: __init__.py  events.py
sdk/src/wherigo_sdk/webui/: __init__.py  server.py
sdk/src/wherigo_sdk/webui/static/: app.js  index.html  styles.css
sdk/tests/: test_cli.py  test_editor_api.py  test_gwc_bridge.py  test_presets.py  test_real_sample_regression.py  test_sdk_flow.py  test_webui.py
sdk/tools/legacy_gwc_bridge/: Program.cs  build.ps1
webui/: README.md  app.js  index.html  requirements.txt  server.py  styles.css
