[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wherigo-sdk"
version = "0.1.0"
description = "Python SDK for building Wherigo editor tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
wherigo = "wherigo_sdk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
